--- a/css/style.css
+++ b/css/style.css
@@ -62,17 +62,21 @@ nav .navbar-nav .nav-item .nav-link:hover::after {
     
 }
 
-@keyframes slide-in {
+@-webkit-keyframes slide-in {
     from {
+        opacity: 0;
         transform: translateX(-100%);
     }
   
     to {
+        opacity: 1;
         transform: translateX(0%);
     }
 }
 
 .headerTransition{
+    opacity: 0;
     animation: 2s ease-in-out slide-in;
+    animation-fill-mode: forwards;
 
 }
