--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Playwrite+NL:wght@100..400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Playwrite+NL:wght@100..400&display=swap');
 
 * {
     margin: 0;
@@ -62,6 +62,11 @@ nav .navbar-nav .nav-item .nav-link:hover::after {
     
 }
 
+.carouselRoundButtons{
+    border-radius: 30px;
+    padding: 20px;
+}
+
 @-webkit-keyframes slide-in {
     from {
         opacity: 0;
@@ -84,6 +89,12 @@ nav .navbar-nav .nav-item .nav-link:hover::after {
 .languageImages{
     max-width: 3rem;
     max-height: 4rem;
+}
+
+#projectsHeader{
+    font-family: 'EB Garmond';
+    font-style: italic;
+    font-weight: 400;
 }
 
 .carouselColor{
